--- a/sigc2/sigc/Dockerfile
+++ b/sigc2/sigc/Dockerfile
@@ -1,12 +1,14 @@
 FROM maven:3.8.4-openjdk-17 AS builder
 WORKDIR /app
-COPY pom.xml .
-RUN mvn dependency:go-offline
+COPY mvnw pom.xml ./
+COPY .mvn .mvn
+RUN chmod +x mvnw
+RUN ./mvnw dependency:go-offline
 COPY src ./src
-RUN chmod +x ./mvnw 
+RUN ./mvnw clean package -DskipTests
 
 FROM openjdk:17-jdk-slim
 WORKDIR /app
-COPY --from=builder /app/target/*.jar app.jar  # ← * au lieu du nom exact
+COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "-Dserver.port=${PORT:-8080}", "app.jar"]
