--- a/sigc2/sigc/Dockerfile
+++ b/sigc2/sigc/Dockerfile
@@ -1,14 +1,18 @@
-FROM maven:3.8.4-openjdk-17 AS builder
+FROM maven:3.9.6-eclipse-temurin-17 AS builder
 WORKDIR /app
+
 COPY mvnw pom.xml ./
 COPY .mvn .mvn
 RUN chmod +x mvnw
-RUN ./mvnw dependency:go-offline
-COPY src ./src
-RUN ./mvnw clean package -DskipTests
 
-FROM openjdk:17.0-jdk-slim
+RUN ./mvnw dependency:go-offline -B
+
+COPY src ./src
+RUN ./mvnw clean package -DskipTests -B
+
+FROM eclipse-temurin:17-jre
 WORKDIR /app
 COPY --from=builder /app/target/*.jar app.jar
+
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "-Dserver.port=${PORT:-8080}", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
