Add mainClass configuration to pom.xml

--- a/sigc2/sigc/pom.xml
+++ b/sigc2/sigc/pom.xml
@@ -117,6 +117,7 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					 <mainClass>com.mohamedbendali.SigcApplication</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
