--- a/sig-frontend-final/sigc-angular/angular.json
+++ b/sig-frontend-final/sigc-angular/angular.json
@@ -49,6 +49,7 @@
           },
           "configurations": {
             "production": {
+              "prerender": false 
                "fileReplacements": [
                 {
                  "replace": "src/environments/environment.ts",
@@ -63,8 +64,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "4mB",
+                  "maximumError": "5mB"
                 }
               ],
               "outputHashing": "all"
