--- a/sigc2/sigc/src/main/resources/application.properties
+++ b/sigc2/sigc/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=sigc
 # DATABASE CONFIGURATION
 # ===============================
 # Utiliser des variables d'environnement pour les donn\uFFFDes sensibles en production
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/recruitment_db}
-spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASSWORD:mohamed}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/recruitment_db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:mohamed}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
