--- a/sig-frontend-final/sigc-angular/render.yaml
+++ b/sig-frontend-final/sigc-angular/render.yaml
@@ -9,3 +9,9 @@ static_sites:
       - type: rewrite
         source: /*
         destination: /index.html
+      - type: postgres
+          name: postgresql-rendement
+          plan: free
+          ipAllowList: []  # Laisser vide pour permettre toutes les connexions
+          databaseName: recruitment_db
+          user: spring_user
