--- a/sigc2/sigc/src/main/resources/application.yml
+++ b/sigc2/sigc/src/main/resources/application.yml
@@ -1,3 +1,24 @@
+# CONFIGURATION UNIQUE pour RENDER - Pas de profils, pas d'options
 spring:
   datasource:
-    url: ${DATABASE_URL}
+    # URL ABSOLUE vers votre base Render - À ADAPTER !
+    url: jdbc:postgresql://dpg-d5icgnh4tr6s73a3v640-a.oregon-postgres.render.com:5432/recruitment_db_0lvd
+    username: mohamed
+    password: mohamed  # Remplacez par le vrai mot de passe !
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 60000
+      initialization-fail-timeout: -1
+  
+  jpa:
+    hibernate:
+      ddl-auto: none  # DÉSACTIVEZ les opérations DDL au démarrage
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        temp:
+          use_jdbc_metadata_defaults: false
+
+# DÉSACTIVEZ la vérification de la datasource
+spring.autoconfigure.exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
