--- a/sigc2/sigc/src/main/resources/application.yml
+++ b/sigc2/sigc/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     # URL ABSOLUE vers votre base Render - À ADAPTER !
-    url: jdbc:postgresql://dpg-d5icgnh4tr6s73a3v640-a.oregon-postgres.render.com:5432/recruitment_db_0lvd
+    url: jdbc:postgresql://dpg-d5icgnh4tr6s73a3v640-a.oregon-postgres.render.com:5432/recruitment_db
     username: mohamed
     password: postgres  
     driver-class-name: org.postgresql.Driver
