Add Google AI configuration to application.properties

--- a/sigc2/sigc/src/main/resources/application.properties
+++ b/sigc2/sigc/src/main/resources/application.properties
@@ -51,6 +51,10 @@ spring.servlet.multipart.max-request-size=10MB
 # ===============================
 # GOOGLE AI (GEMINI) CONFIGURATION
 # ===============================
+spring.config.activate.on-profile=render
+spring.datasource.url=jdbc:postgresql://dpg-d5icgnh4tr6s73a3v640-a.oregon-postgres.render.com:5432/recruitment_db_0lvd
+spring.datasource.username=postgresql
+spring.datasource.password=7dk1nFoy2QIbXIc0Au2iLlviN1xhlITg
 
 # Option 1: Cl\uFFFD API de Google AI Studio (plus simple)
 google.gemini.api.key=${GEMINI_API_KEY:AIzaSyBlB2T54sexBFg8nmsZ1KG8RSjrtQlQRlk}
