--- a/sigc2/sigc/src/main/resources/application.properties
+++ b/sigc2/sigc/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # ===============================
 server.port=8080
 # server.error.include-stacktrace=never # Ne pas inclure la stacktrace dans les r\uFFFDponses d'erreur en prod
+server.address=0.0.0.0
 
 # ===============================
 # FILE STORAGE CONFIGURATION
@@ -106,3 +107,4 @@ spring:
       allowed-methods: "GET,POST,PUT,DELETE,OPTIONS"
       allowed-headers: "*"
       allow-credentials: true
+management.endpoints.web.exposure.include=health
