--- a/sigc2/sigc/src/main/resources/application.properties
+++ b/sigc2/sigc/src/main/resources/application.properties
@@ -108,3 +108,7 @@ spring:
       allowed-headers: "*"
       allow-credentials: true
 management.endpoints.web.exposure.include=health
+# Exposition des endpoints Actuator (au minimum 'health')
+management.endpoints.web.exposure.include=health,info
+# Optionnel : afficher les détails (comme l'état de la base de données)
+management.endpoint.health.show-details= always
