--- a/sigc2/sigc/src/main/resources/application-bootstrap.properties
+++ b/sigc2/sigc/src/main/resources/application-bootstrap.properties
@@ -1,1 +1,25 @@
+# PROFIL BOOTSTRAP - Pour le démarrage INITIAL uniquement
+spring.config.activate.on-profile=bootstrap
 
+# 1. DÉSACTIVER COMPLÈTEMENT SPRING SECURITY
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+# 2. CONFIGURATION POSTGRESQL RENDER (URL ABSOLUE)
+spring.datasource.url=jdbc:postgresql://dpg-d5icgnh4tr6s73a3v640-a.oregon-postgres.render.com:5432/recruitment_db_0lvd
+spring.datasource.username=spring_user
+spring.datasource.password=VOTRE_VRAI_MOT_DE_PASSE_ICI
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.initialization-fail-timeout=-1
+
+# 3. DÉSACTIVER JPA TEMPORAIREMENT
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+# 4. DÉSACTIVER TOUTES LES INITIALISATIONS AUTOMATIQUES
+spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=true
+
+# 5. LOGS DÉTAILLÉS
+logging.level.org.springframework=WARN
+logging.level.com.zaxxer.hikari=DEBUG
