--- a/sigc2/sigc/src/main/resources/application.properties
+++ b/sigc2/sigc/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
   # 'validate' ou 'none' en production
 spring.jpa.show-sql=true
+
+spring.config.activate.on-profile=production
   # Mettre \uFFFD false en production
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -52,10 +54,16 @@ spring.servlet.multipart.max-request-size=10MB
 # ===============================
 # GOOGLE AI (GEMINI) CONFIGURATION
 # ===============================
-spring.config.activate.on-profile=render
+spring.config.activate.on-profile=production
 spring.datasource.url=jdbc:postgresql://dpg-d5icgnh4tr6s73a3v640-a.oregon-postgres.render.com:5432/recruitment_db_0lvd
 spring.datasource.username=postgresql
 spring.datasource.password=7dk1nFoy2QIbXIc0Au2iLlviN1xhlITg
+
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
 
 # Option 1: Cl\uFFFD API de Google AI Studio (plus simple)
 google.gemini.api.key=${GEMINI_API_KEY:AIzaSyBlB2T54sexBFg8nmsZ1KG8RSjrtQlQRlk}
@@ -110,4 +118,5 @@ spring:
 # Exposition des endpoints Actuator (au minimum 'health')
 management.endpoints.web.exposure.include=health,info
 # Optionnel : afficher les détails (comme l'état de la base de données)
+spring.security.enabled=true
 management.endpoint.health.show-details= always
