--- a/sigc2/sigc/src/main/resources/application.properties
+++ b/sigc2/sigc/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=sigc
 # ===============================
 # Utiliser des variables d'environnement pour les donn\uFFFDes sensibles en production
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/recruitment_db}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:mohamed}
+spring.datasource.username=postgres
+spring.datasource.password=mohamed
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
@@ -56,8 +56,9 @@ spring.servlet.multipart.max-request-size=10MB
 # ===============================
 spring.config.activate.on-profile=production
 spring.datasource.url=jdbc:postgresql://dpg-d5icgnh4tr6s73a3v640-a.oregon-postgres.render.com:5432/recruitment_db_0lvd
-spring.datasource.username=postgresql
-spring.datasource.password=7dk1nFoy2QIbXIc0Au2iLlviN1xhlITg
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=5
