--- a/sigc2/sigc/render.yaml
+++ b/sigc2/sigc/render.yaml
@@ -1,10 +1,14 @@
 services:
   - type: web
-    name: sigc
+    name: spring-pfe
     env: java
+    rootDir: .  # Explicitement dans le dossier actuel
     buildCommand: ./mvnw clean package -DskipTests
     startCommand: java -jar target/*.jar
     healthCheckPath: /health
+    initialDelay: 180
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: production
+      - key: JAVA_OPTS
+        value: -Xmx512m -Xms256m
