--- a/sigc2/sigc/src/main/resources/application.properties
+++ b/sigc2/sigc/src/main/resources/application.properties
@@ -55,12 +55,12 @@ spring.servlet.multipart.max-request-size=10MB
 # GOOGLE AI (GEMINI) CONFIGURATION
 # ===============================
 spring.config.activate.on-profile=production
-spring.datasource.url=jdbc:postgresql://dpg-d5icgnh4tr6s73a3v640-a.oregon-postgres.render.com:5432/recruitment_db_qyjb
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.connection-timeout=30000
+
 spring.datasource.hikari.maximum-pool-size=5
 
 spring.jpa.hibernate.ddl-auto=validate
