--- a/sigc2/sigc/src/main/resources/application.properties
+++ b/sigc2/sigc/src/main/resources/application.properties
@@ -27,6 +27,7 @@ server.port=8080
 # server.error.include-stacktrace=never # Ne pas inclure la stacktrace dans les r\uFFFDponses d'erreur en prod
 server.address=0.0.0.0
 
+spring.mvc.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200}
 # ===============================
 # FILE STORAGE CONFIGURATION
 # ===============================
