--- a/sigc2/sigc/src/main/resources/application.properties
+++ b/sigc2/sigc/src/main/resources/application.properties
@@ -63,10 +63,14 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.connection-timeout=30000
 
 spring.datasource.hikari.maximum-pool-size=5
-
-spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.initialization-mode=never
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.show-sql=false
 
+# Délai pour Hikari
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.initialization-fail-timeout=60000
 # Option 1: Cl\uFFFD API de Google AI Studio (plus simple)
 google.gemini.api.key=${GEMINI_API_KEY:AIzaSyBlB2T54sexBFg8nmsZ1KG8RSjrtQlQRlk}
 google.gemini.model.chat=gemini-1.5-flash
