--- a/sigc2/sigc/src/main/resources/application.properties
+++ b/sigc2/sigc/src/main/resources/application.properties
@@ -70,7 +70,7 @@ spring.jpa.show-sql=false
 
 # Délai pour Hikari
 spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.initialization-fail-timeout=60000
+spring.datasource.hikari.initialization-fail-timeout=120000
 # Option 1: Cl\uFFFD API de Google AI Studio (plus simple)
 google.gemini.api.key=${GEMINI_API_KEY:AIzaSyBlB2T54sexBFg8nmsZ1KG8RSjrtQlQRlk}
 google.gemini.model.chat=gemini-1.5-flash
@@ -126,3 +126,7 @@ management.endpoints.web.exposure.include=health,info
 # Optionnel : afficher les détails (comme l'état de la base de données)
 spring.security.enabled=true
 management.endpoint.health.show-details= always
+
+# Health check settings
+management.endpoint.health.probes.enabled=true
+management.health.db.enabled=false  # Désactiver au démarrage
