--- a/sigc2/sigc/src/main/resources/application.properties
+++ b/sigc2/sigc/src/main/resources/application.properties
@@ -127,6 +127,13 @@ management.endpoints.web.exposure.include=health,info
 spring.security.enabled=true
 management.endpoint.health.show-details= always
 
-# Health check settings
+# Garder seulement le health check de base
 management.endpoint.health.probes.enabled=true
-management.health.db.enabled=false  # Désactiver au démarrage
+management.endpoint.health.show-details=never
+# DÉSACTIVER le health check de DataSource pour Render
+management.health.db.enabled=false
+management.endpoint.health.show-details=never
+management.endpoint.health.probes.enabled=true
+
+# CORS pour production
+spring.mvc.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:https://votre-frontend.onrender.com}
