--- a/sigc2/sigc/render.yaml
+++ b/sigc2/sigc/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: sigc
-    env: java
+    env: docker
     rootDir: sigc2/sigc
     buildCommand: ./mvnw clean package -DskipTests
     startCommand: java -jar target/*.jar
